@@ -62,7 +62,6 @@ public class NumberFieldsSample extends javax.swing.JFrame {
         jLocalizedRealNumberField1 = new org.softsmithy.lib.swing.JLocalizedRealNumberField();
         jLocalizedFloatField1 = new org.softsmithy.lib.swing.JLocalizedFloatField();
         jLocalizedDoubleField1 = new org.softsmithy.lib.swing.JLocalizedDoubleField();
-        jFormattedTextField1 = new javax.swing.JFormattedTextField();
 
         getContentPane().setLayout(new java.awt.GridBagLayout());
 
@@ -212,12 +211,6 @@ public class NumberFieldsSample extends javax.swing.JFrame {
         gridBagConstraints.weighty = 1.0;
         getContentPane().add(jLocalizedDoubleField1, gridBagConstraints);
 
-        jFormattedTextField1.setValue(new Double(0));
-        gridBagConstraints = new java.awt.GridBagConstraints();
-        gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
-        gridBagConstraints.weightx = 1.0;
-        getContentPane().add(jFormattedTextField1, gridBagConstraints);
-
         pack();
     }// </editor-fold>//GEN-END:initComponents
     
@@ -225,7 +218,7 @@ public class NumberFieldsSample extends javax.swing.JFrame {
      * @param args the command line arguments
      */
     public static void main(String args[]) {
-        Locale.setDefault(new Locale("de", "CH"));// Locale.US);
+        Locale.setDefault(Locale.US);
         java.awt.EventQueue.invokeLater(new Runnable() {
             public void run() {
                 new NumberFieldsSample().setVisible(true);
@@ -237,7 +230,6 @@ public class NumberFieldsSample extends javax.swing.JFrame {
     private org.softsmithy.lib.swing.JByteField jByteField1;
     private org.softsmithy.lib.swing.JDoubleField jDoubleField1;
     private org.softsmithy.lib.swing.JFloatField jFloatField1;
-    private javax.swing.JFormattedTextField jFormattedTextField1;
     private org.softsmithy.lib.swing.JIntegerField jIntegerField1;
     private javax.swing.JLabel jLabel1;
     private javax.swing.JLabel jLabel10;
